--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			</div>
 	</section>
 
-	<section class="ftco-section ftco-about ftco-no-pt ftco-no-pb" id="groom-bride-section">
+	<section class="ftco-section ftco-about ftco-no-pt ftco-no-pb" id="groom-bride-section" style="background-image: url(images/bg.jpg); background-size: cover;    background-repeat: no-repeat;background-position: top center;">
     	<div class="container">
     		<div class="row">
     			<div class="col-md-12">
